[package]
name = "twitch-plays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
enigo = "0.0.14"
tokio = "1.19.2"
tokio-tungstenite = "0.17.1"
url = "2.2.2"
tungstenite = { version = "0.16.0", features = ["native-tls"] }
dotenv = "0.15.0"
